--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
                 <h4 class="text-md">Welcome to the stock market! Buy and sell stocks to increase your wealth!</h4>
             </div>
             <div>
+                <h5 class="font-bold text-lg">Wallet: $<span id="wallet-amount">10000</span></h5>
+                <h5 class="font-bold text-lg">Net Gain: $<span id="net-gain">+0.0%</span></h5>
+            </div>
+            <div>
                 <div class="text-xl font-bold">Day n</div>
             </div>
         </header>
@@ -31,76 +35,70 @@
             <div id="stocks-container" class="space-y-4">
                 <!-- Stock A -->
                 <div class = "flex justify-between mb-6">
-                    <div class="stock bg-white shadow-lg rounded-lg p-4" id="stock-A">
-                        <div class = "flex items-center justify-between">
-                            <div class = "flex flex-col mr-4">
-                                <h2 class="font-bold text-lg w-24">MSFT</h2>
-                                <h5 class="text-md">Shares: 0</h5>
+                    <div class="stock bg-white shadow-lg rounded-lg p-4 max-w-md max-h-48" id="stock-A">
+                        <div class = "inline items-center justify-between">
+                            <div class = "flex flex-row ml-2 mt-4">
+                                <h2 class="font-bold text-lg w-24 mx-2">AAPL</h2>
+                                <h5 class="text-md mx-2">Shares: 0</h5>
                             </div>
                             <!-- <span class="shares">$100.00</span> -->
+                            <br>
                             <div class="flex align-center">
+                                <input type="number" class="mt-4 mx-4 w-24 h-12 border border-gray-300 rounded-md p-1" placeholder="Quantity" name="asset3"> 
                                 <button class="btn btn--ripple2" id = "increase">Buy</button>
                                 <button class="btn btn--ripple"  id = "decrease">Sell</button>
-                                <input type="number" class="mt-4 mx-4 w-24 h-12 border border-gray-300 rounded-md p-1" placeholder="Shares" name="asset1">
                             </div>
                         </div>
                     </div>
-                    <div id="plotly-div" class="bg-white shadow-lg rounded-lg h-64"> <!-- Plotly chart will be inserted here --> </div>
+                    <div id="plotly-div" class="bg-white shadow-lg rounded-lg w-64 h-auto"> <!-- Plotly chart will be inserted here --> </div>
                 </div>
                 <!-- Stock B -->
                 <div class = "flex justify-between mb-6">
-                    <div class="stock bg-white shadow-lg rounded-lg p-4" id="stock-B">
-                        <div class ="flex items-center justify-between">
-                            <div class = "flex flex-col mr-4">
-                                <h2 class="font-bold text-lg w-24">TSLA</h2>
-                                <h5 class="text-md">Shares: 0</h5>
+                    <div class="stock bg-white shadow-lg rounded-lg p-4 max-w-md max-h-48" id="stock-B">
+                        <div class = "inline items-center justify-between">
+                            <div class = "flex flex-row ml-2 mt-4">
+                                <h2 class="font-bold text-lg w-24 mx-2">TSLA</h2>
+                                <h5 class="text-md mx-2">Shares: 0</h5>
                             </div>
                             <!-- <span class="shares">$100.00</span> -->
+                            <br>
                             <div class="flex align-center">
-                                <button class="btn btn--ripple2"  id = "increase2">Buy</button>
+                                <input type="number" class="mt-4 mx-4 w-24 h-12 border border-gray-300 rounded-md p-1" placeholder="Quantity" name="asset3"> 
+                                <button class="btn btn--ripple2" id = "increase2">Buy</button>
                                 <button class="btn btn--ripple"  id = "decrease2">Sell</button>
-                                <input type="number" class="mt-4 mx-4 w-24 h-12 border border-gray-300 rounded-md p-1" placeholder="Shares" name="asset2">
                             </div>
                         </div>
                     </div>
-                    <div id="plotly-div2" class="bg-white shadow-lg rounded-lg h-64"> <!-- Plotly chart will be inserted here --> </div>
+                    <div id="plotly-div2" class="bg-white shadow-lg rounded-lg w-64 h-auto"> <!-- Plotly chart will be inserted here --> </div>
                 </div>
                 <!-- Stock C -->
                 <div class = "flex justify-between mb-6">
-                    <div class="stock bg-white shadow-lg rounded-lg p-4" id="stock-C">
-                        <div class = "flex items-center justify-between">
-                            <div class = "flex flex-col mr-4">
-                                <h2 class="font-bold text-lg w-24">AAPL</h2>
-                                <h5 class="text-md">Shares: 0</h5>
+                    <div class="stock bg-white shadow-lg rounded-lg p-4 max-w-md max-h-48" id="stock-C">
+                        <div class = "inline items-center justify-between">
+                            <div class = "flex flex-row ml-2 mt-4">
+                                <h2 class="font-bold text-lg w-24 mx-2">AAPL</h2>
+                                <h5 class="text-md mx-2">Shares: 0</h5>
                             </div>
                             <!-- <span class="shares">$100.00</span> -->
+                            <br>
                             <div class="flex align-center">
-                                <button class="btn btn--ripple2"  id = "increase3">Buy</button>
+                                <input type="number" class="mt-4 mx-4 w-24 h-12 border border-gray-300 rounded-md p-1" placeholder="Quantity" name="asset3"> 
+                                <button class="btn btn--ripple2" id = "increase3">Buy</button>
                                 <button class="btn btn--ripple"  id = "decrease3">Sell</button>
-                                <input type="number" class="mt-4 mx-4 w-24 h-12 border border-gray-300 rounded-md p-1" placeholder="Shares" name="asset3">
-                                
                             </div>
                         </div>
                     </div>
                     <div id="plotly-div3" class="bg-white shadow-lg rounded-lg h-64"> <!-- Plotly chart will be inserted here --> </div>
                 </div>
             </div>
-                <!-- Trading stocks and wallet info will go here -->
-                <div class="flex justify-between mb-6">
-                <div id="wallet-container" class="bg-white shadow-lg rounded-lg p-4 flex flex-col items-start">
-                    <h5 class="font-bold text-lg">Wallet: $<span id="wallet-amount">10000</span></h5>
-                    <h5 class="font-bold text-lg">Net Gain: $<span id="net-gain">+0.0%</span></h5>
-                </div>
-            </div>
+       
         </div>
-
- 
 
     </div>
 
     <script>
-        var graphs = {{ graphJSON|safe }};
-        var layout = {{ layoutJSON|safe }};
+        let graphs = {{ graphJSON|safe }};
+        let layout = {{ layoutJSON|safe }};
         layout.staticPlot = true;  // Making the plot static (non-interactive)
         
         // Updating layout for axis titles
@@ -110,7 +108,8 @@
                         tickvals: [1, 2, 3, 4, 5, 6, 7, 8],
                         ticktext: ['9 AM', '10 AM', '11 AM', '12 PM', '1 PM', '2 PM', '3 PM', '4 PM']};
 
-        var layout2 = {{ layoutJSON|safe }};
+        let graphs2 = {{ graphJSON2|safe }};
+        let layout2 = {{ layoutJSON2|safe }};
         layout2.staticPlot = true;  // Making the plot static (non-interactive)
         
         // Updating layout for axis titles
@@ -120,14 +119,15 @@
                         tickvals: [1, 2, 3, 4, 5, 6, 7, 8],
                         ticktext: ['9 AM', '10 AM', '11 AM', '12 PM', '1 PM', '2 PM', '3 PM', '4 PM']};
 
-        var layout3 = {{ layoutJSON|safe }};
+        let graphs3 = {{ graphJSON3|safe }};
+        let layout3 = {{ layoutJSON3|safe }};
         layout3.staticPlot = true;  // Making the plot static (non-interactive)
 
 
         
         Plotly.newPlot('plotly-div', graphs, layout, {displayModeBar: false});
-        Plotly.newPlot('plotly-div2', graphs, layout2, {displayModeBar: false});
-        Plotly.newPlot('plotly-div3', graphs, layout3, {displayModeBar: false});
+        Plotly.newPlot('plotly-div2', graphs2, layout2, {displayModeBar: false});
+        Plotly.newPlot('plotly-div3', graphs3, layout3, {displayModeBar: false});
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
