--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="plotly-div" class="bg-white shadow-lg rounded-lg w-64 h-auto"> <!-- Plotly chart will be inserted here --> </div>
+                    <div id="plotly-div1" class="bg-white shadow-lg rounded-lg w-64 h-auto"> <!-- Plotly chart will be inserted here --> </div>
                 </div>
                 <!-- Stock B -->
                 <div class = "flex justify-between mb-6">
@@ -116,7 +116,7 @@
         const price_display_3 = document.getElementById("price-display3");
 
         // Create initial chart 1 for company 1
-        const chart1 = Highcharts.chart('plotly-div', {
+        const chart1 = Highcharts.chart('plotly-div1', {
             title: {
                 text: 'MSFT'
             },
