--- a/templates/index.html
+++ b/templates/index.html
@@ -205,6 +205,25 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="../static/js/rippleButton.js"></script>
     
+
+    <!-- Instructions Modal -->
+    <div id="instructionsModal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Game Instructions</h2>
+            <p>Welcome to Five Nights at Wall Street! Here's how to play:</p>
+            <!-- Include your game instructions here -->
+            <ul>
+                <li>Rule 1: Buy low, sell high.</li>
+                <li>Rule 2: Watch the market trends.</li>
+                <!-- Add more rules here -->
+            </ul>
+        </div>
+    </div>
+
+    <!-- Link to your custom JavaScript file -->
+    <script src="../static/js/modalLogic.js"></script>
+
     <footer>
         <!-- Social Media Icons by NiftyButtons https://niftybuttons.com --><div style="display: flex; flex-wrap:wrap; align-items: center; justify-content: center;"><a href="true" target="_blank" rel="noopener noreferrer" style="text-decoration:none;border:0;width:37px;height:37px;padding:2px;margin:5px;color:#55828b;border-radius:35%;background-color:#364958;"><svg class="niftybutton-twitterx" style="display:block;fill:currentColor" data-donate="true" data-tag="twix" data-name="TwitterX" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet"><title>Twitter X social icon</title>
     <path d="M 304.757 216.824 L 495.394 0 L 450.238 0 L 284.636 188.227 L 152.475 0 L 0 0 L 199.902 284.656 L 0 512 L 45.16 512 L 219.923 313.186 L 359.525 512 L 512 512 M 61.456 33.322 L 130.835 33.322 L 450.203 480.317 L 380.811 480.317 "></path>
